fix scrollbar and font bug

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,15 @@
       -ms-transform: rotate(25deg);
           transform: rotate(25deg);
 }
+
+::-webkit-scrollbar {
+  height: 13px;
+  width: 13px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 3px solid transparent;
+  border-radius: 7px; 
+  background-clip: padding-box;
+}
