--- a/src/components/ControlPanel.css
+++ b/src/components/ControlPanel.css
@@ -31,8 +31,9 @@
 }
 
 .ControlPanel-scroll {
-  max-height: 506px;
+  max-height: 492px;
   padding: 0 5%;
+  overflow-y: auto;
 }
 
 .ControlPanel-cell {
@@ -82,6 +83,7 @@
   font-size: 10px;
   text-decoration: none;
   color: #b5b5b5;
+  pointer-events: none;
 
   position: relative;
   bottom: 7px;
@@ -92,6 +94,7 @@
 .ControlPanel-thumbnail-source-hover {
   bottom: 0;
   opacity: 1;
+  pointer-events: all;
 }
 
 .ControlPanel-sound-container {
@@ -104,7 +107,7 @@
 }
 
 .ControlPanel-sound-title {
-  font-size: 2vh;
+  font-size: 12px;
   margin-top: 5%;
   margin-bottom: 3%;
   margin-left: 1%;
@@ -132,6 +135,7 @@
 }
 
 .react-tabs__tab-list {
+  font-size: 14px;
   margin: 0;
   padding: 1em 5px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
